--- a/dinishootz/index.html
+++ b/dinishootz/index.html
@@ -9,42 +9,46 @@
 <body>
     <div class="wrapper">
         <nav class="intro">
-            <a href="#">Dinis</a>
+            <a href="#">DINISHOOTZ</a>
             <a href="#"><img id="logo" src="img/logo.svg" alt="Logo Dinishootz"></a>
         </nav>
 
         <header>
             <h1>Multimédia</h1>
             <p>
-
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit numquam sequi tenetur nostrum, impedit eius. Non doloribus laboriosam perspiciatis quos, dolores accusamus minima, sit laborum.
             </p>
             <a href="">Contacte-me</a>
-			<p>
-				EMAIL: antoniodinisoficial@gmail.com			
-			</p>
-			<p>
-				TEL: +351 967 583 238
-			</p>
         </header>
 
-        <div class="mainWork">
+        <div class="montra">
             <a href="" alt=""></a>
             <a href="" alt=""></a>
         </div>
 		
 		<div class="oQueFazemos">
-		
+			<h1>Design Multimédia</h1>
+			<h2 class="somos">EPCI</h2>
+			
+			<ul>
+				<li>Webdesign</li>
+				<li>Logotipagem</li>
+				<li>Video</li>
+				<li>Aplicações</li>
+				<li>Comunicação</li>
+				<li>Design de producto</li>
+			</ul>
 		</div>
 
-        <div class="work">
-            <a href="" alt=""></a>
-            <a href="" alt=""></a>
-            <a href="" alt=""></a>
-            <a href="" alt=""></a>
-            <a href="" alt=""></a>
-            <a href="" alt=""></a>
-            <a href="" alt=""></a>
-            <a href="" alt=""></a>
+        <div class="trabalhos">
+            <a href="#" src="img/logo.svg" alt=""></a>
+            <a href="#" src="img/logo.svg" alt=""></a>
+            <a href="#" src="img/logo.svg" alt=""></a>
+            <a href="#" src="img/logo.svg" alt=""></a>
+            <a href="#" src="img/logo.svg" alt=""></a>
+            <a href="#" src="img/logo.svg" alt=""></a>
+			<a href="#" src="img/logo.svg" alt=""></a>
+			<a href="#" src="img/logo.svg" alt=""></a>
         </div>
     </div>
 	
